enter the commit message for your changes. Lines starting

--- a/templates/test.html
+++ b/templates/test.html
@@ -2,6 +2,7 @@
     <head></head>
     <body>
         <u>this is a try</u>
-        <b>en gras</b>
+        <b>en gras vraiment</b>
+        <i>one more line</i>
     </body>
 </html>
